# tele-s3

./: Cargo.toml  LICENSE  config.example.toml  dist-workspace.toml
.github/: Dockerfile
.github/workflows/: release-container-image.yaml
src/: config.rs  main.rs
src/backend/: mod.rs
src/backend/grammers/: mod.rs
src/backend/grammers/session/: mod.rs
src/backend/grammers/session/entity/: channel_state.rs  mod.rs
src/database/: mod.rs
src/database/entity/: channel_state.rs  peer_info.rs  update_state.rs
src/grammers/: mod.rs
src/grammers/session/: mod.rs
src/grammers/session/entity/: dc_home.rs  dc_option.rs  peer_info.rs
src/s3/: mod.rs  repo.rs
src/s3/metadata/: mod.rs
src/s3/metadata/entity/: bucket.rs  metadata.rs  object.rs
src/s3/repo/: mod.rs
src/s3/repo/entity/: bucket.rs  mod.rs  multipart_upload_state.rs  object.rs
