[package]
name = "tele-s3"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
thiserror = "2.0.17"
grammers-client = "0.8.1"
grammers-mtsender = "0.8.1"
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["io-util", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
anyhow = "1.0.100"
sea-orm = { version = "2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio-rustls", "with-chrono", "with-json", "schema-sync", "entity-registry"] }
async-trait = "0.1.89"
chrono = "0.4.42"
serde_json = "1.0.145"
s3s = "0.11.1"
tokio-util = { version = "0.7.17", features = ["compat", "io"] }
bytes = "1.11.0"
mime = "0.3.17"
hyper-util = { version = "0.1.19", features = ["server", "server-auto", "tokio"] }
uuid = { version = "1.19.0", features = ["v4"] }

[patch.crates-io]
grammers-client = { git = "https://github.com/azamaulanaaa/grammers", branch = "sqlite-storage", package = "grammers-client" }
grammers-mtsender = { git = "https://github.com/azamaulanaaa/grammers", branch = "sqlite-storage", package = "grammers-mtsender" }
grammers-session = { git = "https://github.com/azamaulanaaa/grammers", branch = "sqlite-storage", package = "grammers-session" }
